5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1789_1615.log
== TEST (2019-05-29 18:13:47) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))

if(jogador=a1):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
File "XXXX", line 6
    if(jogador=a1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:14:06) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))

if(jogador==a1):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:15:03) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))

if(jogador!=a2):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:16:24) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))
anel1=40
anel2=20
anel3=10
anel4=0
if(jogador!=a2):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:16:39) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))
anel1=40
anel2=20
anel3=10
anel4=0
if(jogador!=anel4):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:17:22) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))
print(anel1=40)
print(anel2=20)
print(anel3=10)
print(anel4=0)
if(jogador!=anel4):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:17:38) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))
print(anel1=40)
print(anel2=20)
print(anel3=10)
print(0)
if(jogador!=anel4):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- EXECUTION TIME:
0.533332
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1615/main.py", line 5, in <module>
    print(anel1=40)
TypeError: 'anel1' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:17:39) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))
print(anel1=40)
print(anel2=20)
print(anel3=10)
print(0)
if(jogador!=anel4):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:42) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))
print(anel1=[40])
print(anel2=[20])
print(anel3=[10])
print()
if(jogador!=anel4):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:46) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))
print(anel1 40)
print(anel2 20)
print(anel3 10)
print()
if(jogador!=anel4):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
File "XXXX", line 5
    print(anel1 40)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:57) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))
print(anel1,40)
print(anel2 20)
print(anel3 10)
print()
if(jogador!=anel4):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
File "XXXX", line 6
    print(anel2 20)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:20:08) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))
print(anel1,40)
print(anel2,20)
print(anel3,10)
print()
if(jogador!=anel4):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:20:50) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))
print('anel1,40')
print('anel2,20')
print('anel3,10')
print()
if(jogador!=anel4):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:22:55) 
-- CODE:
from numpy import*

a1=array(eval(input("primeiro jogador: ")))
a2=array(eval(input("segundo jogador: ")))
print('anel1= 40')

print()
if(jogador!=anel4):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:24:59) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))




print()
if(jogador!=anel4):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:42:25) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))




print()
if(jogador!=anel4):
	print("JOGADOR UM")
else:
	print("JOGADOR DOIS")
print(a1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:17) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:49) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:46:31) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

if(jogador um):
	print('a1')
-- ERROR:
File "XXXX", line 8
    if(jogador um):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:47:29) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

print("jogador um")
print("jogador dois")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:47:50) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

print("jogador um")
print("jogador dois")
-- EXECUTION TIME:
0.587908
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1615/main.py", line 5, in <module>
    a3=array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:49:00) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

print("jogador um")
print("jogador dois")
print('a1' , 'a2' , 'a3' )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:49:25) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

print("jogador um")
print("jogador dois")
print('a1' , 'a2' , 'a3' )
-- EXECUTION TIME:
0.537692
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1615/main.py", line 5, in <module>
    a3=array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:50:14) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

while(jogador um)
	print("jogador um")
else:
print("jogador dois")
print('a1' , 'a2' , 'a3' )
-- ERROR:
File "XXXX", line 8
    while(jogador um)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:52:59) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

while(a1 > 0 )
if(JOGADOR DOIS )
print("jogador dois")
print('a1' , 'a2' , 'a3' )
-- ERROR:
File "XXXX", line 8
    while(a1 > 0 )
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:53:09) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

while(a1 < 0 )
if(JOGADOR DOIS )
print("jogador dois")
print('a1' , 'a2' , 'a3' )
-- ERROR:
File "XXXX", line 8
    while(a1 < 0 )
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:53:24) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

while(a1 >= 0 )
print("jogador dois")
print('a1' , 'a2' , 'a3' )
-- ERROR:
File "XXXX", line 8
    while(a1 >= 0 )
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:53:30) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

while(a1 >= 0 ):
print("jogador dois")
print('a1' , 'a2' , 'a3' )
-- ERROR:
File "XXXX", line 9
    print("jogador dois")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:54:05) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

if(a1 == 40):
print()
print("jogador dois")
print('a1' , 'a2' , 'a3' )
-- ERROR:
File "XXXX", line 9
    print()
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:54:14) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

if(a1 == 40):
print("jogador dois")
print('a1' , 'a2' , 'a3' )
-- ERROR:
File "XXXX", line 9
    print("jogador dois")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:54:44) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

if(a1 == 40):
print(JOGADOR UM)
print('a1' , 'a2' , 'a3' )
-- ERROR:
File "XXXX", line 9
    print(JOGADOR UM)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:56:51) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

if(a1 == 40):
	print(pontos)
if(a2==20):
	print(pontos)
if(a3==10
	print(pontos)

	
print(JOGADOR UM)
print('a1' , 'a2' , 'a3' )
-- ERROR:
File "XXXX", line 13
    print(pontos)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:57:02) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

if(a1 == 40):
	print(pontos)
if(a2==20):
	print(pontos)
if(a3==10)
	print(pontos)

	
print(JOGADOR UM)
print('a1' , 'a2' , 'a3' )
-- ERROR:
File "XXXX", line 12
    if(a3==10)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:57:23) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

if(a1 == 40):
	print(pontos)
if(a2 == 20):
	print(pontos)
if(a3 == 10)
	print(pontos)

	
print(JOGADOR UM)
print('a1' , 'a2' , 'a3' )
-- ERROR:
File "XXXX", line 12
    if(a3 == 10)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:57:39) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

if(a1 == 40):
	print(pontos)
if(a2 == 20):
	print(pontos)
else:
	(a3 == 10)
	print(pontos)

	
print(JOGADOR UM)
print('a1' , 'a2' , 'a3' )
-- ERROR:
File "XXXX", line 17
    print(JOGADOR UM)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:58:58) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

if(a1 == 40):
	print(pontos)
if(a2 == 20):
	print(pontos)
else:
	(a3 == 10)
	print(pontos)
else:
print("JOGADOR UM")
print(JOGADOR UM )
-- ERROR:
File "XXXX", line 15
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:59:09) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

if(a1 == 40):
	print(pontos)
if(a2 == 20):
	print(pontos)
else:
	(a3 == 10)
	print(pontos)
	else:
	print("JOGADOR UM")
print(JOGADOR UM )
-- ERROR:
File "XXXX", line 15
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:59:16) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

if(a1 == 40):
	print(pontos)
if(a2 == 20):
	print(pontos)
else:
	(a3 == 10)
	print(pontos)
else:
	print("JOGADOR UM")
print(JOGADOR UM )
-- ERROR:
File "XXXX", line 15
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:59:24) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

if(a1 == 40):
	print(pontos)
if(a2 == 20):
	print(pontos)
else:
	(a3 == 10)
	print(pontos)
	else:
		print("JOGADOR UM")
print(JOGADOR UM )
-- ERROR:
File "XXXX", line 15
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:59:48) 
-- CODE:
from numpy import*

a1=array(eval(input("anel 1: ")))
a2=array(eval(input("anel 2: ")))
a3=array(eval(input("anel 3: ")))
a4=array(eval(input("anel 4: ")))

elif(a1 == 40):
	print(pontos)
if(a2 == 20):
	print(pontos)
else:
	(a3 == 10)
	print(pontos)
	else:
		print("JOGADOR UM")
print(JOGADOR UM )
-- ERROR:
File "XXXX", line 8
    elif(a1 == 40):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
